# ai-code-detector

./: .gitignore  README.md  eval.py  predict.py  pyproject.toml  requirements.txt  train.py
configs/: README.md
configs/model/: codebert-base.yaml  droiddetect-base.yaml
configs/tasks/: subtask_a.yaml  subtask_b.yaml  subtask_c.yaml
notebooks/: data_investigation.ipynb  test.ipynb
src/semeval2026_task13/: __init__.py
src/semeval2026_task13/data/: __init__.py  dataset.py
src/semeval2026_task13/evaluation/: __init__.py  metrics.py
src/semeval2026_task13/models/: __init__.py  classifier.py
src/semeval2026_task13/training/: __init__.py  trainer.py
src/semeval2026_task13/utils/: __init__.py  config.py  submission.py
